# mandelbrot

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE_MIT  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml
src/: lib.rs  logic.rs  utils.rs
www/: index.js  package-lock.json  package.json  webpack.config.js
